--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://rick00kim.github.io/kururu-blog/"
+baseURL = "https://rick00kim.github.io/"
 # [en, zh-cn, fr, ...] determines default content language
 defaultContentLanguage = "en"
 # language code
@@ -30,7 +30,7 @@ theme = "FeelIt"
         # you can add extra information after the name (HTML format is supported), such as icons
         post = ""
         name = "Posts"
-        url = "/posts/"
+        url = "kururu-blog/posts/"
         # title will be shown when you hover on this menu link.
         title = ""
         weight = 1
@@ -39,7 +39,7 @@ theme = "FeelIt"
         pre = ""
         post = ""
         name = "Tags"
-        url = "/tags/"
+        url = "kururu-blog/tags/"
         title = ""
         weight = 2
       [[languages.en.menu.main]]
@@ -47,7 +47,7 @@ theme = "FeelIt"
         pre = ""
         post = ""
         name = "Categories"
-        url = "/categories/"
+        url = "kururu-blog/categories/"
         title = ""
         weight = 3
       [[languages.en.menu.main]]
@@ -55,7 +55,7 @@ theme = "FeelIt"
         pre = ""
         post = ""
         name = "Docs"
-        url = "/categories/documentation/"
+        url = "kururu-blog/categories/documentation/"
         title = ""
         weight = 4
       [[languages.en.menu.main]]
@@ -63,7 +63,7 @@ theme = "FeelIt"
         pre = ""
         post = ""
         name = "About"
-        url = "/about/"
+        url = "kururu-blog/about/"
         title = ""
         weight = 5
 
