Modify kururu-blog [at 22/11/2021 02:27]

--- a/config.toml
+++ b/config.toml
@@ -172,6 +172,17 @@ theme = "FeelIt"
   defaultTheme = "dark"
   gitRepo = "https://github.com/Rick00Kim"
 
+  [params.page.toc]
+    # whether to enable the table of the contents
+    # 是否使用目录
+    enable = true
+    # whether to keep the static table of the contents in front of the post
+    # 是否保持使用文章前面的静态目录
+    keepStatic = false
+    # whether to make the table of the contents in the sidebar automatically collapsed
+    # 是否使侧边目录自动折叠展开
+    auto = true
+
   # Footer config
   [params.footer]
     enable = false
@@ -184,7 +195,12 @@ theme = "FeelIt"
 # Markup related configuration in Hugo
 [markup]
   [markup.highlight]
+    lineNos = true
     noClasses = false
+   # Table Of Contents settings
+  [markup.tableOfContents]
+    startLevel = 2
+    endLevel = 4
 
 # Author config
 [author]
