Add comment (disqus) 02

--- a/config.yml
+++ b/config.yml
@@ -218,6 +218,7 @@ params:
       keepStatic: false
       auto: true
     comment:
+      enable: true
       disqus:
         enable: true
         shortname: Rick00Kim
