--- a/config.yml
+++ b/config.yml
@@ -219,9 +219,13 @@ params:
       auto: true
     comment:
       enable: true
-      disqus:
+      vssue:
         enable: true
-        shortname: Rick00Kim
+        platform: "github"
+        owner: "Rick00Kim"
+        repo: "kururu-blog"
+        clientId: "a7d393679b82f55d962f"
+        clientSecret: "2553e24a1c904edd5451859291e21c35a2c2d1ae"
   footer:
     enable: true
   social:
