--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -23,6 +23,8 @@ jobs:
 
       - name: Build
         run: hugo --minify
+        env:
+          HUGO_VSSUE_CLIENTSECRET: ${{ secrets.HUGO_VSSUE_CLIENTSECRET }}
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
