Modify kururu-blog [18/09/2022 18:01] Modify MBTI in abount

--- a/config.yml
+++ b/config.yml
@@ -69,7 +69,7 @@ languages:
         enable: true
         param: true
         paramTitle: SKILLS
-        description: "I have a strong responsibility for my work(**RESPONSIBILITY**), I always think about improving the quality of the project(**QUALITY**). My MBTI (InWork: [ENFJ](https://www.16personalities.com/enfj-personality), InUsual: [INFP](https://www.16personalities.com/infp-personality))"
+        description: "I have a strong responsibility for my work(**RESPONSIBILITY**), I always think about improving the quality of the project(**QUALITY**). My MBTI (InWork: [ENFJ](https://www.16personalities.com/enfj-personality), InUsual: [INTP](https://www.16personalities.com/intp-personality))"
         status:
           - faIcon: fas fa-building
             title: Company
