--- a/config.yml
+++ b/config.yml
@@ -73,13 +73,13 @@ languages:
         status:
           - faIcon: fas fa-building
             title: Company
-            desc: Recruit group
+            desc: AFI
           - faIcon: fas fa-briefcase fa-fw
             title: Occupation
-            desc: System engineer
+            desc: DevOps engineer
           - title: Location
             faIcon: fas fa-map-marker-alt
-            desc: Japan
+            desc: Korea
         parameter:
           - language: JAVA
             level: "90"
@@ -175,7 +175,7 @@ languages:
         status:
           - faIcon: fas fa-building
             title: Company
-            desc:AFI
+            desc: AFI
           - faIcon: fas fa-briefcase fa-fw
             title: Occupation
             desc: DevOps engineer
