--- a/config.yml
+++ b/config.yml
@@ -209,7 +209,7 @@ languages:
           paginate: 6
           imagePreview: true
 params:
-  version: 1.1.0
+  version: 1.0.X
   defaultTheme: dark
   gitRepo: "https://github.com/Rick00Kim"
   page:
